Deprecated, for removal: This API element is subject to removal in a future version.